開発の事前準備

--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -45,8 +45,8 @@
         </div>
         <div id="number-form" class="input-default"></div>
         <div class='available-card'>
-          <%= image_tag 'card_visa.gif', class: 'card-logo'%>
-          <%= image_tag 'card_mastercard.gif', class: 'card-logo'%>
+          <%= image_tag 'card-visa.gif', class: 'card-logo'%>
+          <%= image_tag 'card-mastercard.gif', class: 'card-logo'%>
           <%= image_tag 'card-jcb.gif', class: 'card-logo'%>
           <%= image_tag 'card-amex.gif', class: 'card-logo'%>
         </div>
